[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeguardian"
version = "1.0.0"
description = "AI Code Review RL Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.1",
    "python-dotenv>=1.0.0"
]

[tool.setuptools.packages.find]
include = ["server*"]
